# confluence_report

./: Dockerfile  README.md  pyproject.toml  report.py  requirements.txt
.github/workflows/: deploy.yml  deploy.yml.hold
deploy/: deploy-ecr.sh
terraform/: confluence-report.tf  main.tf  variables.tf
