[project]
name = "confluence-report"
version = "1.0.0"
description = "Reports on Confluence workflow status"
authors = [
    {name = "Nikki",email = "17799906+nikki-t@users.noreply.github.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "report.py"}
]